--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,9 +1,33 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Boards</title>
+  </head>
+  <body>
+    <h1>Boards</h1>
 
-<!DOCTYPE html> <html>
-<head>
-<meta charset="utf-8"> <title>Boards</title>
-</head> <body>
-<h1>Boards</h1>
-{% for board in boards %}
-{{ board.name }} <br> {% endfor %}
-</body> </html>
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Board</th>
+          <th>Posts</th>
+          <th>Topics</th>
+          <th>Last Post</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for board in boards %}
+          <tr>
+            <td>
+              {{ board.name }}<br>
+              <small style="color: #888">{{ board.description }}</small>
+            </td>
+            <td>0</td>
+            <td>0</td>
+            <td></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </body>
+</html>
