--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,9 +1,18 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Boards</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <style>
+      .thead-inverse th {
+        background-color: black;
+        color: white;
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
